samples/_failures_safe/1761092308_8c557b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27b5a285.c: In function ‘main’:
./samples/SAFE/__tmp_27b5a285.c:133:30: error: missing terminating " character
  133 |     add_log_entry(&analyzer, "2024-01-
      |                              ^~~~~~~~~
./samples/SAFE/__tmp_27b5a285.c:133:5: error: expected expression at end of input
  133 |     add_log_entry(&analyzer, "2024-01-
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_27b5a285.c:133:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_27b5a285.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_27b5a285.c:133:5: error: expected declaration or statement at end of input
  133 |     add_log_entry(&analyzer, "2024-01-
      |     ^~~~~~~~~~~~~
